# boss-web-participant

./: .gitignore  DEVELOP.md  README.md  setup.cfg
bwp/: manage.py
bwp/bwp/: asgi.py  settings.py  urls.py  wsgi.py
bwp/participant/: boss.py  models.py
bwp/participant/migrations/: 0001_initial.py
participants/: web_participant.py
