# see https://packaging.python.org/guides/distributing-packages-using-setuptools/
[metadata]
name = bwp
version = 1.0.0
description = a Python library providing a BOSS Web Participant framework
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/meegointegration/boss-web-participant
author = David Greaves
author_email = david.greaves@jolla.com
license = GPLv2
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GPLv2 License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
project_urls =
    Documentation = https://
    Source = https://
    Tracker = https://

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    django
python_requires = >=3.6

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    bsw = bwp.__main__:main

[options.extras_require]
test =
    pytest >= 6.2.2
    #    pycodestyle
    #	 pytest-cov
    flake8
    pylint
    isort
    mypy
all =
    %(test)s
